test/files/pos/t12159b/H_1.java
// javaVersion: 17+
package p;

sealed abstract public class H_1 {
}

final class J extends H_1 {
}

final class K extends H_1 {
}

final class L extends H_1 {
}
