test/files/neg/t12159d/X.java
// javaVersion: 17+
package p;

sealed abstract public class X {
}

final class W extends X {
}

final class Y extends X {
}

final class Z extends X {
}
